Revision history for XML-Grammar-Fiction.

    * Updated some of the bug report URLs to read "XML-Grammar-Fiction"
    instead of "XML-Grammar-Screenplay".

0.3.0       Tue May 17 22:59:17 IDT 2011
    * Add extradata/screenplay-xml-to-tei.xslt and 
    lib/XML/Grammar/Screenplay/ToTEI.pm - add tests for them.
        - They convert Screenplay-XML into TEI - Text Encoding Initiative,
        a markup language for digital representation of texts (especially 
        artsy texts such as screenplays, prose or poems) 
            - http://www.tei-c.org/ .
        - This will allow for easier conversion into XSL-FO, as well as many
        other formats.
    * Got rid of the <!DOCTYPE .... > declaration in the Screenplay-XML
    output (it confused the heck out of xsltproc and was not really needed
    as we use a RELAX-NG schema instead of a DTD.)
    * Create lib/XML/Grammar/FictionBase/XSLT/Converter.pm as a base
    class for the converters.
        - removed lib/XML/Grammar/Fiction/RendererBase.pm as it was no
        longer used.
        - Create some sub-classes.

0.2.0       Fri May 13 16:56:00 IDT 2011
    * Add support for <ol>, <li> and <ul> to Fiction-Text and Fiction-XML.

0.1.7       Tue Apr 19 00:55:07 IDT 2011
    * Add support for &#91; and other numeric entities.

0.1.6       Sat Apr  9 16:15:17 IDT 2011
    * Now handling the <a /> element only in XML::Grammar::Screenplay - it
    does not exist in ::Fiction.
    * Add support for the <a href="$URL">$CONTENT</a> tag in Fiction-Text 
    which is translated into <span xlink:href="$URL" >$CONTENT</span> in
    the Fiction-XML grammar.

0.1.5       Mon Apr  4 23:08:18 IDT 2011

    * Add the tag-release.pl script to tag a release using svn.berlios.de.
    * Fix the handling of a colon (":") inside a top-level description
    in XML-Grammar-Screenplay.

0.1.4       Mon Apr  4 00:50:07 IDT 2011
    * ::Screenplay - Fix the innerdesc on the start of the line in the middle 
    of the paragraph. Like:
